--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -1,8 +1,5 @@
 name: Contracts
 
-env:
-  FOUNDRY_PROFILE: "ci"
-
 on:
   push:
     branches: [main]
@@ -18,7 +15,7 @@ on:
 jobs:
   format:
     name: Format
-    runs-on: buildjet-2vcpu-ubuntu-2204 
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -28,9 +25,9 @@ jobs:
           fetch-depth: 2
 
       - name: Install Foundry
-        uses: "foundry-rs/foundry-toolchain@v1"
+        uses: foundry-rs/foundry-toolchain@v1
 
-      - name: Ensure files are the same as forge fmt
+      - name: Ensure files are formatted correctly
         working-directory: ./contracts
         run: forge fmt src/ test/ script/ --check
 
@@ -46,24 +43,18 @@ jobs:
           fetch-depth: 2
 
       - name: Install Foundry
-        uses: "foundry-rs/foundry-toolchain@v1"
+        uses: foundry-rs/foundry-toolchain@v1
 
       - name: Build the contracts and print their size
         working-directory: ./contracts
         run: forge build --sizes
 
-      # - name: Check gas snapshots
-      #   working-directory: ./contracts
-      #   run: forge snapshot --check
-
       - name: Add build summary
-        run: |
-          echo "## Build result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+        run: echo "## Build result\n✅ Passed" >> $GITHUB_STEP_SUMMARY
 
   test:
     name: Test
-    needs: ["format", "build"]
+    needs: [format, build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -74,23 +65,14 @@ jobs:
           fetch-depth: 2
 
       - name: Install Foundry
-        uses: "foundry-rs/foundry-toolchain@v1"
+        uses: foundry-rs/foundry-toolchain@v1
 
-      # - name: Check test coverage
-      #   working-directory: ./contracts
-      #   run: forge coverage
-
-      - name: Generate a fuzz seed that changes weekly to avoid burning through RPC allowance
-        run: >
-          echo "FOUNDRY_FUZZ_SEED=$(
-            echo $(($EPOCHSECONDS - $EPOCHSECONDS % 604800))
-          )" >> $GITHUB_ENV
+      - name: Generate a fuzz seed that changes weekly
+        run: echo "FOUNDRY_FUZZ_SEED=$(( $(date +%s) - $(date +%s) % 604800 ))" >> $GITHUB_ENV
 
       - name: Run the tests
         working-directory: ./contracts
         run: forge test
 
       - name: Add test summary
-        run: |
-          echo "## Tests result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+        run: echo "## Tests result\n✅ Passed" >> $GITHUB_STEP_SUMMARY
